--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Shoval the queen</title>
 </head>
 <body>
-<h1>Shoval's first website =)</h1>
+	shovishov
 </body>
 </html>
